Initial JavaFX support.